ffm api